[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/Farming and Mining/Monsters.png" type="Texture" id=1]
[ext_resource path="res://actors/zombie/Zombie.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.0
height = 9.5

[sub_resource type="CircleShape2D" id=2]
radius = 11.9714

[sub_resource type="CircleShape2D" id=3]
radius = 200.0

[node name="Zombie" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 3
hframes = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="PathTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="MeleeArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MeleeArea2D"]
visible = false
shape = SubResource( 2 )

[node name="DetectionArea2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea2D"]
shape = SubResource( 3 )

[node name="MeleeTimer" type="Timer" parent="."]

[node name="WanderTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true
[connection signal="timeout" from="PathTimer" to="." method="_on_PathTimer_timeout"]
[connection signal="body_entered" from="MeleeArea2D" to="." method="_on_MeleeArea2D_body_entered"]
[connection signal="body_exited" from="MeleeArea2D" to="." method="_on_MeleeArea2D_body_exited"]
[connection signal="body_entered" from="DetectionArea2D" to="." method="_on_DetectionArea2D_body_entered"]
[connection signal="body_exited" from="DetectionArea2D" to="." method="_on_DetectionArea2D_body_exited"]
[connection signal="timeout" from="MeleeTimer" to="." method="_on_MeleeTimer_timeout"]
[connection signal="timeout" from="WanderTimer" to="." method="_on_WanderTimer_timeout"]
